<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calculator Example</string>
    <string name="my_app">Мое приложение.</string>
    <string name="title_activity_edit_text">EditText</string>
    <string name="save">Сохранить</string>
    <string name="main_page">Главная страница!</string>
    <string name="settings">Настройки</string>
    <string name="notebook">Записная книжка</string>
    <string name="calculator">Калькулятор</string>
    <string name="main">Главная</string>
    <string name="choose_lang">Выберите язык:</string>
    <string name="toSimple">К ОБЫЧНОМУ ВИДУ</string>
    <string name="toScience">К ИНЖЕНЕРНОМУ ВИДУ</string>
    <string name="selectColor">Выберите цвет:</string>
    <string name="selectIndent">Выберите отступ</string>

    <string-array name="langs">
        <item>Русский</item>
        <item>English</item>
    </string-array>

    <string-array name="margins" tools:ignore="InconsistentArrays">
        <item>Малый</item>
        <item>Средний</item>
        <item>Большой</item>
    </string-array>
</resources>
